# stalker

./: .codeclimate.yml  .editorconfig  .gitignore  .hgignore  .travis.yml  CHANGELOG  CHANGELOG.0.0  CHANGELOG.0.1  CHANGELOG.rst  CHANGELOG_OLD.rst  Dockerfile-py2.7  Dockerfile-py3.5  INSTALL  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  TODO  TODO.rst  VERSION  __init__.py  alembic.ini  appveyor.yml  create_sdist  create_sdist.cmd  development.ini  doTest  doTests  doTests.bat  idea_about_templates.txt  production.ini  pserve  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests  setup.cfg  setup.py  (+7 more)
.github/workflows/: pytest.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0063f547dc2e_updated_version_inputs_table.py  019378697b5b_rename_depends_to_to_depends_on.py  101a789e38ad_created_task_respons.py  101a789e38ad_created_task_responsible.py  1181305d3001_added_client_id_column_to_goods_table.py  130a7697cd79_vacation_user_can_no.py  130a7697cd79_vacation_user_can_now_be_nullable.py  174567b9c159_note_content.py  182f44ce5f07_added_users_company_and_projects_client.py  1875136a2bfc_removed_version_variant_name_attribute.py  1c9c9c28c102_price_lists_and_goods.py  21b88ed3da95_added_referencemixin.py  2252e51506de_multiple_repositories.py  23dff41c95ff_removed_tasks_is_complete_column.py  255ee1f9c7b3_added_payments_table.py  258985128aff_create_entitygroups_table.py  25b3eba6ffe7_derive_version_from.py  25b3eba6ffe7_derive_version_from_.py  275bdc106fd5_added_ticket_summary.py  2aeab8b376dc_fg_color_bg_color.py  2e4a3813ae76_created_daily_class.py  2f55dc4f199f_wiki_page.py  30c576f3691_.py  30c576f3691_budget_and_budget_entry.py  31b1e22b455e_added_exclude_and_check_constraints_to_.py  39d3c16ff005_budget_entries_good_id.py  3be540ad3a93_added_version_revision_number_attribute.py  409d2d73ca30_.py  409d2d73ca30_user_rate.py  433d9caaafab_task_review_status_workflow.py  4400871fa852_scene_is_now_deriving_from_task.py  4664d72ce1e1_renamed_link_path_to_full_path.py  46775e4a3d96_create_enum_types.py  4a836cf73bcf_create_entitytype_accepts_references.py  5078390e5527_shot_scene_relation_is_now_many_to_one.py  5168cc8552a3_html_style_html_class.py  5355b569237b_version_version_of_r.py  53d8127d8560_parent_child_relatio.py  57a5949c7f29_cache_for_total_logg.py  57a5949c7f29_cache_for_total_logged_seconds.py  (+29 more)
conf/: __init__.py  defaultSettings.py  defaults.py
core/models/: booking.py  comment.py  entity.py  imageFormat.py  link.py  pipelineStep.py  repository.py  sequence.py  shot.py  status.py  structure.py  task.py  template.py  typeEntity.py  user.py  version.py
db/: __init__.py  auth.py  login.py  mapper.py  meta.py  setup_db.py  tables.py
docs/: Makefile  buildDocs  conf.py  contribute.rst  createDocs  design.rst  index.rst  make.bat  make_html.bat  test.rst
docs/_static/: database_schema_changes.txt  stalker_design.vue
docs/doctrees/: contribute.doctree  design.doctree  environment.pickle  index.doctree  inheritance_diagram.doctree  modules.doctree
examples/: __init__.py  flat_project_example.py
models/: __init__.py  a.py  asset.py  assetBase.py  assetType.py  b.py  booking.py  comment.py  db.py  department.py  entity.py  error.py  group.py  imageFormat.py  link.py  pipelineStep.py  project.py  reference.py  repository.py  sequence.py  shot.py  status.py  structure.py  tag.py  task.py  template.py  typeEntity.py  unit.py  units.py  user.py  version.py
stalker/: __init__.py  config.py  errors.py  exceptions.py  log.py  models.py  security.py  testing.py  tests.py  utils.py  views.py
stalker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_declerative.py  test_entity.py  test_exceptions.py  test_imageFormat.py  test_logging.py  test_mocker.py  test_readme_tutorial.py  test_stalker.py  test_status.py  test_tag.py  test_template_idea.py  test_testing.py  test_unit.py  test_units.py  test_version.py  testing_class.py  untitled-2.py  untitled-3.py  utils.py
utils/: __init__.py
(+630 files in other folders)
