[nosetests]
match=^test
nocapture=1
cover-package=stalker
with-coverage=1
cover-erase=1

[compile_catalog]
directory = stalker/locale
domain = stalker
statistics = true

[extract_messages]
add_comments = TRANSLATORS:
output_file = stalker/locale/stalker.pot
width = 80

[init_catalog]
domain = stalker
input_file = stalker/locale/stalker.pot
output_dir = stalker/locale

[update_catalog]
domain = stalker
input_file = stalker/locale/stalker.pot
output_dir = stalker/locale
previous = true

[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE